<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GpsTracker FB</string>
    <string name="app_custom_name">Flavien B. version</string>
    <string name="default_upload_website">https://dashboard.berwick.fr/updatelocation.php</string>

    <string name="query_sending"></string>
    <string name="location_permission">Go into settings and find Gps Tracker app and enable Location.</string>
    <string name="tracking_is_off">Tracking is Off</string>
    <string name="tracking_is_on">Tracking is On</string>
    <string name="user_needs_to_restart_tracking">Please restart tracking to change the time interval.</string>
    <string name="reachability_error">Cannot reach the website that you have entered. Did you spell it correctly? Does your website use http or https?</string>
    <string name="textfields_empty_or_spaces">Please fill in both fields. User names cannot have a space.</string>
    <string name="google_play_services_unavailable">Please go into Settings > Apps and enable Google Play Services.</string>
    <string name="location_unavailable">Please go into Settings > Apps and enable Location.</string>
    <string name="user_name">user name</string>
    <string name="upload_website">upload website</string>
    <string name="upload_frequency">Update website every :</string>
    <string name="pending_queries">Pending queries :</string>
    <string name="one_minute">1 minute</string>
    <string name="two_minutes">2 minutes</string>
    <string name="three_minutes">3 minutes</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
</resources>
