<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.websmithing.gpstracker.GpsTrackerActivity" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_custom_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:layout_marginBottom="20px"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUserName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:id="@+id/txtWebsite"
        android:layout_below="@+id/txtUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/upload_website" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_frequency"
        android:id="@+id/lblInterval"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/txtWebsite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <RadioGroup
        android:id="@+id/intervalRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lblInterval"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" >
        <RadioButton
            android:id="@+id/i1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_minute" >
        </RadioButton>
        <RadioButton
            android:id="@+id/i2"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_minutes" >
        </RadioButton>
        <RadioButton
            android:id="@+id/i3"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_minutes" >
        </RadioButton>
        <RadioButton
            android:id="@+id/i5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_minutes" >
        </RadioButton>
        <RadioButton
            android:id="@+id/i10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_minutes" >
        </RadioButton>
        <RadioButton
            android:id="@+id/i15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_minutes" >
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_tracking_button"
        android:text="@string/tracking_is_off"
        android:id="@+id/trackingButton"
        android:layout_weight="1"
        android:height="50dip" />
    </LinearLayout>
</RelativeLayout>
